--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,12 +15,11 @@
         android:layout_centerInParent="true"
         />
 
-    <EditText
+    <android.support.v7.widget.AppCompatEditText
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:hint="Name"
