--- a/app/src/main/res/layout/key_preview.xml
+++ b/app/src/main/res/layout/key_preview.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="#ffff00"
+    android:background="@drawable/key_bg"
+    android:textColor="#000"
     android:textStyle="bold"
     android:textSize="30sp"
     />
