--- a/app/src/main/res/xml/hexadecimal_keyboard.xml
+++ b/app/src/main/res/xml/hexadecimal_keyboard.xml
@@ -1,39 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.inputmethodservice.KeyboardView
+<Keyboard
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:keyHeight="7%p"
+    android:keyWidth="15%p"
     android:horizontalGap="5dp"
     android:verticalGap="5dp" >
 
     <Row >
-        <Key android:codes="55"    android:keyLabel="7" android:keyEdgeFlags="left" android:horizontalGap="5%p" android:keyWidth="15%p" />
-        <Key android:codes="56"    android:keyLabel="8" android:keyWidth="15%p"/>
-        <Key android:codes="57"    android:keyLabel="9" android:keyWidth="15%p"/>
+        <Key android:codes="55"    android:keyLabel="7" android:keyEdgeFlags="left" android:horizontalGap="5%p"  />
+        <Key android:codes="56"    android:keyLabel="8" />
+        <Key android:codes="57"    android:keyLabel="9" />
         <Key android:codes="65"    android:keyLabel="A" android:horizontalGap="10%p"  android:keyWidth="17.5%p"/>
         <Key android:codes="66"    android:keyLabel="B" android:keyEdgeFlags="right" android:keyWidth="17.5%p"/>
-        <!--<Key android:codes="-5"    android:keyLabel="DEL" android:isRepeatable="true" android:horizontalGap="6.25%p" />-->
+        <!--<Key android:codes="-5"    android:keyLabel="DEL" android:isRepeatable="true" android:horizontalGap="6.25%
+        p" />-->
         <!--<Key android:codes="55006" android:keyLabel="CLR" android:keyEdgeFlags="right"/>-->
     </Row>
     <Row>
-        <Key android:codes="52"    android:keyLabel="4" android:keyEdgeFlags="left" android:horizontalGap="5%p" android:keyWidth="15%p" />
-        <Key android:codes="53"    android:keyLabel="5" android:keyWidth="15%p"/>
-        <Key android:codes="54"    android:keyLabel="6" android:keyWidth="15%p"/>
+        <Key android:codes="52"    android:keyLabel="4" android:keyEdgeFlags="left" android:horizontalGap="5%p"  />
+        <Key android:codes="53"    android:keyLabel="5" />
+        <Key android:codes="54"    android:keyLabel="6" />
         <Key android:codes="67"    android:keyLabel="C" android:horizontalGap="10%p"  android:keyWidth="17.5%p"/>
         <Key android:codes="68"    android:keyLabel="D" android:keyEdgeFlags="right" android:keyWidth="17.5%p"/>
         <!--<Key android:codes="55002" android:keyIcon="@drawable/sym_keyboard_left" android:isRepeatable="true" android:horizontalGap="6.25%p" />-->
         <!--<Key android:codes="55003" android:keyIcon="@drawable/sym_keyboard_right" android:isRepeatable="true" android:keyEdgeFlags="right" />-->
     </Row>
     <Row>
-        <Key android:codes="49"    android:keyLabel="1" android:keyEdgeFlags="left" android:horizontalGap="5%p" android:keyWidth="15%p" />
-        <Key android:codes="50"    android:keyLabel="2" android:keyWidth="15%p"/>
+        <Key android:codes="49"    android:keyLabel="1" android:keyEdgeFlags="left" android:horizontalGap="5%p"  />
+        <Key android:codes="50"    android:keyLabel="2" />
         <Key android:codes="51"    android:keyLabel="3" android:keyWidth="15%p"/>
         <Key android:codes="69"    android:keyLabel="E" android:horizontalGap="10%p"  android:keyWidth="17.5%p"/>
-        <Key android:codes="70"    android:keyLabel="F" android:keyEdgeFlags="right" android:keyWidth="17.5%p"/>
+        <Key android:codes="70"    android:keyLabel="F" android:keyEdgeFlags="right" android:keyWidth="17.5%p" />
         <!--<Key android:codes="55001" android:keyIcon="@drawable/sym_keyboard_allleft" android:horizontalGap="6.25%p" />-->
         <!--<Key android:codes="55004" android:keyIcon="@drawable/sym_keyboard_allright" android:keyEdgeFlags="right" />-->
     </Row>
     <Row>
-        <Key android:codes="48"    android:keyLabel="0" android:horizontalGap="5%p" android:keyWidth="45%p" android:keyEdgeFlags="left" />
-        <Key android:codes="-5" android:keyLabel="DEL" android:horizontalGap="10%p" android:keyWidth="20%p"  android:isRepeatable="true"/>
-        <Key android:codes="-4" android:keyLabel="DONE" android:keyWidth="20%p" android:keyEdgeFlags="right"/>
+        <Key android:codes="48"    android:keyLabel="0" android:horizontalGap="5%p" android:keyWidth="48%p" android:keyEdgeFlags="left" />
+        <Key android:codes="-5" android:keyLabel="DEL" android:horizontalGap="10%p" android:keyWidth="17.5%p"  android:isRepeatable="true"/>
+        <Key android:codes="-4" android:keyLabel="DONE" android:keyWidth="17.5%p" android:keyEdgeFlags="right"/>
     </Row>
-</android.inputmethodservice.KeyboardView>
+</Keyboard>
